# async-axum-graphql

./: .env  Cargo.toml
entity/: Cargo.toml
entity/src/: ingredient.rs  ingredient_media_picture.rs  ingredient_media_video.rs  lib.rs  media_picture.rs  media_video.rs  member.rs  prelude.rs  recipe.rs  recipe_ingredient.rs  recipe_member.rs  recipe_step.rs  recipe_step_media_picture.rs  recipe_step_media_video.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
server/: Cargo.toml
server/src/: main.rs
server/src/common/: authentication.rs  mod.rs  state.rs
server/src/graphql/: mod.rs  schema.rs
server/src/graphql/mutation/: member.rs  mod.rs
server/src/graphql/query/: member.rs  mod.rs
server/src/state/: mod.rs  state.rs
src/: main.rs
