[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.198"
async-graphql = "7.0.3"
async-graphql-axum = "7.0.3"

[dependencies.sea-orm]
version = "1.0.0-rc.3"
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
]
