[package]
name = "canabrava_recipes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
reqwest = "0.12.4"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
derive_more = "0.99.17"
log = "0.4.21"
anyhow = "1.0.82"
dotenv = "0.15.0"
clap = "4.5.4"
entity = { path = "../entity" }
migration = {path = "../migration" }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
async-graphql = "7.0.3"
async-graphql-axum = "7.0.3"

[dependencies.sea-orm]
version = "1.0.0-rc.3"
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
]

